# brevly-print

./: CLAUDE.md  Cargo.toml
.github/scripts/: blob-upload.cjs
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  noren-contract-brief.md
.planning/phases/01-foundation-thread-model-spike/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-activation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-tray-runtime-first-distributable/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-pusher-event-stream/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-job-pipeline/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-HUMAN-UAT.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW-FIX.md  05-REVIEW.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-resilience/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-HUMAN-UAT.md  06-PATTERNS.md  06-RESEARCH.md  06-REVIEW.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-auto-update-distribution-polish/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-HUMAN-UAT.md  07-PATTERNS.md  07-RESEARCH.md  07-UAT.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/quick/20260716-fix-noren-base-url/: PLAN.md  SUMMARY.md
.planning/quick/20260716-fix-static-crt/: PLAN.md  SUMMARY.md
.planning/quick/20260716-fix-vpk-packdir/: PLAN.md  SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: activation_state.rs  activation_window.rs  app_dir.rs  config_store.rs  health_state.rs  lib.rs  machine_id.rs  main.rs  noren_client.rs  print_worker.rs  retry_task.rs  spike_window.rs  tray_runtime.rs
src/assets/: tray_green.rgba  tray_red.rgba  tray_yellow.rgba
src/credential_store/: devfile.rs  dpapi.rs  error.rs  mod.rs
src/printer/: error.rs  mod.rs  serial.rs  spooler.rs  stub.rs
src/pusher/: backoff.rs  client.rs  mod.rs  protocol.rs
src/update/: apply.rs  check.rs  mod.rs  verify.rs
tests/: config_store_test.rs  credential_contract_test.rs  credential_store_test.rs  noren_client_test.rs  pending_jobs_test.rs  print_worker_test.rs  printer_test.rs  pusher_auth_test.rs  retry_task_test.rs  update_task_test.rs  window_smoke_test.rs
